force-app/main/default/objects/Integration_Service_Field__c/Integration_Service_Field__c.object-meta.xml
<CustomObject>
    <description>Used to map an integration service&apos;s field to a data field</description>
    <label>Integration Service Field</label>
    <nameField>
        <label>Integration Service Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Service Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>