force-app/main/default/objects/Integration_Service_Field__c/fields/Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Data_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Field</label>
    <referenceTo>Data_Field__c</referenceTo>
    <relationshipLabel>Integration Service Fields</relationshipLabel>
    <relationshipName>Integration_Service_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>