force-app/main/default/objects/Integration_Service_Field__c/fields/Data_Length__c.field-meta.xml
<CustomField>
    <fullName>Data_Length__c</fullName>
    <description>Length of Data Field</description>
    <label>Data Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>