force-app/main/default/objects/Integration_Service_Field__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Primitive data type of field</description>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>