force-app/main/default/objects/Integration_Service_Field__c/fields/Integration_Service__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service__c</fullName>
    <label>Integration Service</label>
    <referenceTo>Integration_Service__c</referenceTo>
    <relationshipLabel>Integration Service Fields</relationshipLabel>
    <relationshipName>Integration_Service_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>