force-app/main/default/objects/Integration_Service_Field__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <description>User Story tied to the Integration Service Field being connected to the Data Field</description>
    <label>User Story</label>
    <length>255</length>
    <type>Text</type>
</CustomField>